# async-url-shortener

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  alembic.ini  compose.yaml  docker-compose.yaml  env.example  execute_migrations.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  requirements.txt  run_app.py  shortener.db  todo.md  update_reqs.sh  upload_test_coverage.py
.github/: dependabot.yml
.github/workflows/: automerge.yml  build-docker.yml  deploy-azure.yml  deploy-heroku.yml  master.yml  merge-bot.yml  pre-commit-autoupdate.yml  pre-commit.yml  publish-docker.yml  pytest-pull-request.yml  python-app.yml
.github/workflows/disabled/: build-docker.yml  codeql-analysis.yml  deploy-azure.yml  merge-bot.yml
alembic/: env.py
alembic/versions/: 06302158c673_add_url_table.py  5da9b1a53149_initial_migration.py  d6f2bb97ceff_add_url_table.py
database_migrations/: create_short_url_table.sql  execute_migrations.py
docs/: TODO.md
shortener/: actions.py  app.py  database.py  factory.py  migration.sql  models.py  settings.py  views.py
shortener/models/: __init__.py  url.py
shortener/views/: basic.py  redirect.py  swagger.py  urls.py
static/: swagger-ui-bundle.js  swagger-ui-standalone-preset.js  swagger-ui-standalone-preset.js.map  swagger-ui.js  swagger-ui.js.map
tests/: conftest.py  test_something.py
tests/integration/: test_basic.py  test_error_handling.py  test_redirect.py  test_url_edge_cases.py  test_urls.py
tests/unit/: test_actions.py  test_database_settings.py  test_settings.py  test_url_validators.py  test_validators.py
