
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async-url-shortener"
version = "0.1.0"
description = "Simple async url shortener written using Starlette framework. Mostly a toy project made to experiment with different things such as GitHub actions or python async libraries."
readme = "README.md"
requires-python = "==3.12.*"
authors = [
    {name = "Jakub Kriz"},
]
dependencies = [
    "aiofiles",
    "asyncpg",
    "fastapi",
    "gunicorn",
    "httptools",
    "httpx",
    "jinja2",
    "psycopg2-binary",
    "pydantic",
    "pydantic_settings",
    "pyyaml",
    "requests",
    "starlette",
    "uvicorn[standard]",
    "uvloop",
    "sqlalchemy",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["shortener"]

[project.scripts]
async-url-shortener = "shortener.app:main"

[tool.pytest.ini_options]
addopts = "-ra -q -vvv"
asyncio_mode = "auto"
testpaths = [
    "tests"
]
