
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async-url-shortener"
version = "0.1.0"
description = "Simple async url shortener written using Starlette framework. Mostly a toy project made to experiment with different things such as GitHub actions or python async libraries."
readme = "README.md"
requires-python = "==3.14.*"
authors = [
    {name = "Jakub Kriz"},
]
dependencies = [
    "psycopg[binary]",
    "psycopg-pool",
    "starlette",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio",
    "pytest-cov",
    "testcontainers[postgres]",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["shortener"]

[project.scripts]
async-url-shortener = "shortener.app:main"

[tool.pytest.ini_options]
addopts = "-ra -q -vvv"
asyncio_mode = "auto"
testpaths = [
    "tests"
]
